--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -3,7 +3,7 @@ body{
 }
 .nav a{
     font-size: auto;
-    padding: 30px;
+    padding: auto;
     font-family: 'Open Sans', sans-serif;
     text-decoration: none;
 }
@@ -22,13 +22,13 @@ body{
 .image_main {
     border: 5px solid rgba(226, 226, 226, 0.829);
     padding: 4px;
-    width: 280px;
+    width: 100%;
     border-radius: 50%;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 20;
-    height: 23;
+    width: 100%;
+    height: auto;
     animation-name: image;
     animation-duration: 1s;
 }
