--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@ body{
 }
 .image_main {
     border: 5px solid rgba(226, 226, 226, 0.829);
-    padding: 4px;
+    padding: auto;
     width: 280px;
     border-radius: 50%;
     display: block;
