--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -6,6 +6,7 @@ body{
     padding: 10px;
     font-family: 'Open Sans', sans-serif;
     text-decoration: none;
+    margin-top: 15px;
 }
 .nava{    
     color: rgb(207, 207, 207);
