--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -6,7 +6,7 @@ body{
     padding: 20px;
     font-family: 'Open Sans', sans-serif;
     text-decoration: none;
-    margin-top: 15px;
+    padding-top: 20px;
 }
 .nava{    
     color: rgb(207, 207, 207);
