--- a/css/videos.css
+++ b/css/videos.css
@@ -7,6 +7,7 @@ body{
     font-family: 'Open Sans', sans-serif;
     text-decoration: none;
     margin-top: 15px;
+    padding-top: 20px;
 }
 .nava{    
     color: rgb(207, 207, 207);
