--- a/css/videos.css
+++ b/css/videos.css
@@ -3,11 +3,11 @@ body{
 }
 .nav a{
     font-size: auto;
-    padding: 20px;
+    padding: auto;
     font-family: 'Open Sans', sans-serif;
     text-decoration: none;
     margin-top: 15px;
-    padding-top: 20px;
+    padding-top: auto;
 }
 .nava{    
     color: rgb(207, 207, 207);
