--- a/Tinkethix/style.css
+++ b/Tinkethix/style.css
@@ -91,7 +91,7 @@ background-image: url(./img/ATL_lab_img.jpg);
 
 /* 1.3. about IMG BACKGROUND */
 .about-bg {
-background-image: url(./img/ATL_working_img.jpg);
+background-image: url(./img/ATL_lab_img.jpg);
 }
 
 
