image_change-commit

--- a/Tinkethix/style.css
+++ b/Tinkethix/style.css
@@ -85,13 +85,13 @@ background-image: url();
 
 /* 1.2. testimonials IMG BACKGROUND */
 .bg-photo.testimonials {
-background-image: url(./img/ATL_lab_img.jpg);
+background-image: url(./img/image.jpgs);
 }
 
 
 /* 1.3. about IMG BACKGROUND */
 .about-bg {
-background-image: url(./img/ATL_lab_img.jpg);
+background-image: url(./img/image.jpg);
 }
 
 
